# task-hub-desktop

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  renovate.json
.github/: pull_request_template.md
.github/workflows/: auto-release.yml  build.yml  claude-code-review.yml  claude.yml  issue-implement.yml  issue-scan.yml  lint.yml  test.yml
assets/: LICENSE  icon.icns
scripts/: install-macos.sh
src/: App.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/apple-intelligence/: Package.resolved  Package.swift
src-tauri/apple-intelligence/Sources/AppleIntelligence/: Bridge.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_bridge.rs  frontmatter.rs  lib.rs  main.rs  note_creator.rs  task_parser.rs  template.rs  vault_watcher.rs
src/components/: AiSummaryDialog.tsx  Dashboard.tsx  Header.tsx  Sidebar.tsx  SummaryView.tsx  WeeklySection.tsx
src/hooks/: useVault.ts
