[package]
name = "task-hub-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"         # Vaultパス等の設定永続化

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

notify = "6"                     # ファイル監視
notify-debouncer-mini = "0.4"    # デバウンス付きファイル監視

chrono = { version = "0.4", features = ["serde"] }  # 日付・ISO週番号
walkdir = "2"                    # Vault内Markdown再帰スキャン
regex = "1"                      # タスク行・Templater構文抽出

thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"                    # macOSネイティブAPI（信号機ボタン位置調整など）

[build-dependencies]
tauri-build = { version = "2", features = [] }
