[package]
name = "task-hub-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "task_hub_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"         # Vaultパス等の設定永続化
tauri-plugin-dialog = "2"        # フォルダ選択ダイアログ

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

notify = "8"                     # ファイル監視
notify-debouncer-mini = "0.7"    # デバウンス付きファイル監視

chrono = { version = "0.4", features = ["serde"] }  # 日付・ISO週番号
walkdir = "2"                    # Vault内Markdown再帰スキャン
regex = "1"                      # タスク行・Templater構文抽出

thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"                    # macOSネイティブAPI（信号機ボタン位置調整など）

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "deny"
# Tauri コマンドは State を値渡しする規約
needless_pass_by_value = "allow"
# パーセント計算の cast は意図的
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
# モジュール構成の都合で許容
module_name_repetitions = "allow"
# 日本語ドキュメントコメントの誤検知を回避
doc_markdown = "allow"
# エントリーポイントの panics doc は不要
missing_panics_doc = "allow"
# expand() / start_watching() は将来のエラー返却に備えて Result を維持
unnecessary_wraps = "allow"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
